--- a/index.Rmd
+++ b/index.Rmd
@@ -2,15 +2,18 @@
 title: "Pipelines IDS-BPD Bioinformatics"
 author: "Alejandra Hernandez-Segura"
 date: "`r Sys.Date()`"
-output: pdf_document
 biblio-style: apalike
 link-citations: yes
-highlight: tango
-documentclass: book
+colorlinks: yes
+lot: no
+lof: no
+graphics: yes
+urlcolor: blue
+geometry: "left=1.5in, right=1.5in, top=1.25in, bottom=1.25in"
+always_allow_html: yes  
 ---
 
 ```{r}
-knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
 
 knitr::opts_chunk$set(echo = TRUE, 
                       eval = FALSE,
@@ -19,13 +22,14 @@ knitr::opts_chunk$set(echo = TRUE,
                       warning = FALSE)
 ```
 
+
 # Introduction and General Instructions
 
 In this "book" you will find the handbooks of all the available pipelines for the Bacteriology and Parasitology Department of the IDS (RIVM). The handbooks are updated regularly but if you would find a mistake or something that is not up-to-date, please communicate with:
 
 - Alejandra Hernandez ( [email](mailto:alejandra.hernandez.segura@rivm.nl) )
 
-.extralarge[**Important note:**]
+**Important note:**
 This handbook is in continuous development, so please keep that in mind and contact [Alejandra Hernandez](alejandra.hernandez.segura@rivm.nl) if you wish to add/change something or if you need help with troubleshooting (please read the troubleshooting section for each pipeline first). 
 
 ## General Instructions for all pipelines {#general-instructions}
@@ -49,22 +53,39 @@ If you are going to download a pipeline, please do so in the same partition that
 _GitHub website_  
 
 1. Go to the website for the pipeline (check the section of the specific pipeline).  
-2. Press the green button “Code” on the page and then click on “Download zip”.  
-3. A zip file (<pipelinie_name>-master.zip) will have likely be downloaded on your “Downloads” folder. Please move this zip file to the `BioGrid` or the `scratch_dir` partitions, depending on where your data is.  
-4. Extract the files of the zip file. In Linux this is normally done by pressing the left button of the mouse, then “Open with Archive Manager” and then press “Extract” on the two windows that will consecutively appear. You could then delete the zip file.   
+2. Press the green button “Code” on the page and then click on “Download zip” (see [Figure](#github-fig) for explanation).  
+3. A zip file (<pipeline_name>-master.zip) will have likely be downloaded on your “Downloads” folder. Please move this zip file to the `BioGrid` or the `scratch_dir` partitions, depending on where your data is.  
+4. Extract the files of the zip file. In Linux this is normally done by pressing the left button of the mouse, then “Open with Archive Manager” and then press “Extract” on the two windows that will consecutively appear. You could then delete the zip file (see [Figure](#extract-fig) for explanation).   
+
+```{r github-fig, echo = FALSE, eval = TRUE, fig.cap = "Pipelines can be downloaded directly from their GitHub website."}
+knitr::include_graphics("figures/screenshot_download_github.png")
+```
+
+```{r extract-fig, echo = FALSE, eval = TRUE, fig.cap = "Unzipping a repository in Linux."}
+knitr::include_graphics("figures/screenshot_unzip.png")
+```
 
 _GitLab website_  
 
 1. Go to the website for the pipeline (check the section of the specific pipeline).   
-2. Press the small white button with a cloud and a downwards arrow. In the dropdown menu, choose "Download zip".   
+2. Press the small white button with a cloud and a downwards arrow. In the drop-down menu, choose "Download zip" (see [Figure](#gitlab-fig) for explanation).   
 3. A zip file (<pipeline_name>-master.zip) will have likely be downloaded on your “Downloads” folder. Please move this zip file to the `BioGrid` or the `scratch_dir` partitions, depending on where your data is.  
-4. Extract the files of the zip file. In Linux this is normally done by pressing the left button of the mouse, then “Open with Archive Manager” and then press “Extract” on the two windows that will consecutively appear. You could then delete the zip file.  
+4. Extract the files of the zip file. In Linux this is normally done by pressing the left button of the mouse, then “Open with Archive Manager” and then press “Extract” on the two windows that will consecutively appear. You could then delete the zip file (see [Figure](#extract-fig) above for explanation).  
+
+```{r gitlab-fig, echo = FALSE, eval = TRUE, fig.cap = "Pipelines can be downloaded directly from their GitLab website."}
+knitr::include_graphics("figures/screenshot_download_gitlab.png")
+```
 
 _Command-line_   
 
 Any member of the RIVM has a (RIVM-specific) GitLab account. You can log in with the same creadentials that you use for accessing your workspaces. In the case of pipelines hosted on GitHub, you may need a free GitHub account.     
 
-1. Open the “terminal” (you could also open “terminator”) by going to the “Applications” menu of the linux environment.  
+1.  Open the “terminal” (you could also open “terminator”) by going to the “Applications” menu of the linux environment.  
+
+```{r commandline-fig, echo = FALSE, eval = TRUE, fig.cap = "Pipelines can be downloaded directly from their GitLab website."}
+knitr::include_graphics("figures/schreenshot_terminal.png")
+```
+
 2. Go to the location where you want to download the pipeline using the command ‘cd’. For instance:  
 
 ```{bash, eval = FALSE}
